Search bar was added

--- a/google.html
+++ b/google.html
@@ -5,7 +5,10 @@
 
 <body>
 <img Class="Main-Logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="The google logo">
-
+<form>
+    <input Class="Search-Bar" type="search">
+    
+    </form>
 </body>
 
 </html>
