Added nav bar as bulleted list

--- a/google.html
+++ b/google.html
@@ -1,6 +1,13 @@
 <html>
 <header>
-
+<ul>
+    <li><a href="about.asp">About</a></li>
+    <li><a href="store.asp">Store</a></li>
+    <li><a href="gmail.asp">Gmail</a></li>
+    <li><a href="images.asp">Images</a></li>
+    <li><a href="apps.asp">Google Apps</a></li>
+    <li><a href="signin.asp">Sign In</a></li>
+</ul>
 </header>
 
 <body>
