--- a/google.html
+++ b/google.html
@@ -1,12 +1,12 @@
 <html>
 <header>
 <ul>
-    <li><a href="about.asp">About</a></li>
-    <li><a href="store.asp">Store</a></li>
-    <li><a href="gmail.asp">Gmail</a></li>
-    <li><a href="images.asp">Images</a></li>
-    <li><a href="apps.asp">Google Apps</a></li>
-    <li><a href="signin.asp">Sign In</a></li>
+    <li><a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=webhp&cd=&cad=rja&uact=8&ved=0ahUKEwjHgYaVsOXwAhWvAp0JHYRECdgQkNQCCAI&url=https%3A%2F%2Fabout.google%2F%3Ffg%3D1%26utm_source%3Dgoogle-US%26utm_medium%3Dreferral%26utm_campaign%3Dhp-header&usg=AOvVaw13L0SpN0L7ycx9R0_i4R2S">About</a></li>
+    <li><a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=webhp&cd=&cad=rja&uact=8&ved=0ahUKEwjHgYaVsOXwAhWvAp0JHYRECdgQpMwCCAM&url=https%3A%2F%2Fstore.google.com%2FUS%3Futm_source%3Dhp_header%26utm_medium%3Dgoogle_ooo%26utm_campaign%3DGS100042%26hl%3Den-US&usg=AOvVaw0wvkRBURf91YdMQCXOelDf">Store</a></li>
+    <li><a href="https://mail.google.com/mail/&ogbl">Gmail</a></li>
+    <li><a href="https://www.google.com/imghp?hl=en&ogbl">Images</a></li>
+    <li><a href="https://www.google.com/intl/en/about/products">Google Apps</a></li>
+    <li><a href="https://accounts.google.com/ServiceLogin?hl=en&passive=true&continue=https://www.google.com/&ec=GAZAmgQ">Sign In</a></li>
 </ul>
 </header>
 
