Added search buttons

--- a/google.html
+++ b/google.html
@@ -16,6 +16,10 @@
     <input Class="Search-Bar" type="search">
     
     </form>
+<div Class="Search-Buttons">
+    <button Class="Google-Search">Google Search</button>
+    <button Class="Feeling-Lucky">I'm Feeling Lucky</button>
+</div>
 </body>
 
 <footer>
