Added logo and list for header

--- a/google2.html
+++ b/google2.html
@@ -2,18 +2,26 @@
 <html>
 <head>
     <style>
-
+        body {
+            display: flex;
+            flex-direction: column;
+        }
     </style>
 </head>
 <body>
     <header>
         <nav>
-
+            <li><a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=webhp&cd=&cad=rja&uact=8&ved=0ahUKEwjHgYaVsOXwAhWvAp0JHYRECdgQkNQCCAI&url=https%3A%2F%2Fabout.google%2F%3Ffg%3D1%26utm_source%3Dgoogle-US%26utm_medium%3Dreferral%26utm_campaign%3Dhp-header&usg=AOvVaw13L0SpN0L7ycx9R0_i4R2S">About</a></li>
+            <li><a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=webhp&cd=&cad=rja&uact=8&ved=0ahUKEwjHgYaVsOXwAhWvAp0JHYRECdgQpMwCCAM&url=https%3A%2F%2Fstore.google.com%2FUS%3Futm_source%3Dhp_header%26utm_medium%3Dgoogle_ooo%26utm_campaign%3DGS100042%26hl%3Den-US&usg=AOvVaw0wvkRBURf91YdMQCXOelDf">Store</a></li>
+            <li><a href="https://accounts.google.com/ServiceLogin?hl=en&passive=true&continue=https://www.google.com/&ec=GAZAmgQ">Sign In</a></li>
+            <li><a href="https://www.google.com/intl/en/about/products">Google Apps</a></li>
+            <li><a href="https://www.google.com/imghp?hl=en&ogbl">Images</a></li>
+            <li><a href="https://mail.google.com/mail/&ogbl">Gmail</a></li> 
         </nav>
     </header>
     <div Class="main">
-        <div id="logo">
-
+        <div Class="logo-container">
+            <img id="logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="The google logo">
         </div>
         <div id="search-bar">
 
