--- a/google2.html
+++ b/google2.html
@@ -6,6 +6,32 @@
             display: flex;
             flex-direction: column;
         }
+        nav {
+            display: flex;
+            flex-direction: row;
+        }
+        .main {
+            display: flex;
+            flex-direction: column;
+        }
+        .logo-container {
+            display: flex; 
+            justify-content: center;
+        }
+        #logo {
+            
+        }
+        .search-bar-container {
+            display: flex;
+            justify-content: center;
+        }
+        #search-bar {
+
+        }
+        .search-buttons-container {
+            display: flex;
+            justify-content: center;
+        }
     </style>
 </head>
 <body>
@@ -13,26 +39,32 @@
         <nav>
             <li><a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=webhp&cd=&cad=rja&uact=8&ved=0ahUKEwjHgYaVsOXwAhWvAp0JHYRECdgQkNQCCAI&url=https%3A%2F%2Fabout.google%2F%3Ffg%3D1%26utm_source%3Dgoogle-US%26utm_medium%3Dreferral%26utm_campaign%3Dhp-header&usg=AOvVaw13L0SpN0L7ycx9R0_i4R2S">About</a></li>
             <li><a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=webhp&cd=&cad=rja&uact=8&ved=0ahUKEwjHgYaVsOXwAhWvAp0JHYRECdgQpMwCCAM&url=https%3A%2F%2Fstore.google.com%2FUS%3Futm_source%3Dhp_header%26utm_medium%3Dgoogle_ooo%26utm_campaign%3DGS100042%26hl%3Den-US&usg=AOvVaw0wvkRBURf91YdMQCXOelDf">Store</a></li>
-            <li><a href="https://accounts.google.com/ServiceLogin?hl=en&passive=true&continue=https://www.google.com/&ec=GAZAmgQ">Sign In</a></li>
-            <li><a href="https://www.google.com/intl/en/about/products">Google Apps</a></li>
+            <li><a href="https://mail.google.com/mail/&ogbl">Gmail</a></li>
             <li><a href="https://www.google.com/imghp?hl=en&ogbl">Images</a></li>
-            <li><a href="https://mail.google.com/mail/&ogbl">Gmail</a></li> 
+            <li><a href="https://www.google.com/intl/en/about/products">Google Apps</a></li>
+            <li><a href="https://accounts.google.com/ServiceLogin?hl=en&passive=true&continue=https://www.google.com/&ec=GAZAmgQ">Sign In</a></li>   
         </nav>
     </header>
     <div Class="main">
         <div Class="logo-container">
             <img id="logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="The google logo">
         </div>
-        <div id="search-bar">
-
-        </div>
-        <div id="search-buttons">
-            
+        <form Class="search-bar-container">
+            <input id="search-bar" type="search">
+        </form>
+        <div Class="search-buttons-container">
+            <button id="google-search">Google Search</button>
+            <button id="feeling-lucky">I'm Feeling Lucky</button>
         </div>
     </div>   
     <footer>
         <nav>
-
+            <li><a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=webhp&cd=&cad=rja&uact=8&ved=0ahUKEwjHgYaVsOXwAhWvAp0JHYRECdgQkdQCCA4&url=https%3A%2F%2Fwww.google.com%2Fintl%2Fen_us%2Fads%2F%3Fsubid%3Dww-ww-et-g-awa-a-g_hpafoot1_1!o2%26utm_source%3Dgoogle.com%26utm_medium%3Dreferral%26utm_campaign%3Dgoogle_hpafooter%26fg%3D1&usg=AOvVaw3XLzhicA5ZZW0afDbW0l2T">Advertising</a></li>
+            <li><a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=webhp&cd=&cad=rja&uact=8&ved=0ahUKEwjHgYaVsOXwAhWvAp0JHYRECdgQktQCCA8&url=https%3A%2F%2Fwww.google.com%2Fservices%2F%3Fsubid%3Dww-ww-et-g-awa-a-g_hpbfoot1_1!o2%26utm_source%3Dgoogle.com%26utm_medium%3Dreferral%26utm_campaign%3Dgoogle_hpbfooter%26fg%3D1&usg=AOvVaw2SJ4zwRVXKyZr53qG9dm4K">Business</a></li>
+            <li><a href="https://google.com/search/howsearchworks/?fg=1">How Search Works</a></li>
+            <li><a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=webhp&cd=&cad=rja&uact=8&ved=0ahUKEwjHgYaVsOXwAhWvAp0JHYRECdgQ8awCCBE&url=https%3A%2F%2Fpolicies.google.com%2Fprivacy%3Fhl%3Den%26fg%3D1&usg=AOvVaw25lN6TjyY2uszSImdhMejE">Privacy</a></li>
+            <li><a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=webhp&cd=&cad=rja&uact=8&ved=0ahUKEwjHgYaVsOXwAhWvAp0JHYRECdgQ8qwCCBI&url=https%3A%2F%2Fpolicies.google.com%2Fterms%3Fhl%3Den%26fg%3D1&usg=AOvVaw2d8Ahs2oc0jxVOgPfpr4Fe">Terms</a></li>
+            <li><a href="">Settings</a></li>
         </nav>
     </footer>
 </body>
