Removed bullets in nav and added padding to main section container

--- a/google2.html
+++ b/google2.html
@@ -9,10 +9,13 @@
         nav {
             display: flex;
             flex-direction: row;
+            justify-content: space-between;
+            list-style-type: none;
         }
         .main {
             display: flex;
             flex-direction: column;
+            padding: 100px 0 100px 0;
         }
         .logo-container {
             display: flex; 
