--- a/google2.html
+++ b/google2.html
@@ -24,14 +24,20 @@
             color: inherit;
             text-decoration: none;
         }
+        .apps-icon {
+            height: 30px;
+            width: 30px;
+        }
         .align-left {
             display: flex;
             justify-items: left;
+            align-items: center;
             opacity: .75;
         }
         .align-right {
             display: flex;
             justify-items: right;
+            align-items: center;
             opacity: .85;
         }
         .main {
@@ -77,7 +83,12 @@
             <div Class="align-right">
                 <li><a href="https://mail.google.com/mail/&ogbl">Gmail</a></li>
                 <li><a href="https://www.google.com/imghp?hl=en&ogbl">Images</a></li>
-                <li><a href="https://www.google.com/intl/en/about/products">Google Apps</a></li>
+                <li><a href="https://www.google.com/intl/en/about/products">
+                    <svg class="apps-icon" focusable="false" viewBox="0 0 24 24">
+                        <path d="M6,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM16,6c0,1.1 0.9,2 2,2s2,-0.9 2,-2 -0.9,-2 -2,-2 -2,0.9 -2,2zM12,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2z"></path>
+                    </svg>
+                    </a>
+                </li>
                 <li><a id="signin" href="https://accounts.google.com/ServiceLogin?hl=en&passive=true&continue=https://www.google.com/&ec=GAZAmgQ">Sign In</a></li>   
             </div>
         </nav>
