--- a/google2.html
+++ b/google2.html
@@ -78,6 +78,18 @@
             display: flex;
             justify-content: center;
         }
+        .search-buttons {
+            background-color: rgb(242, 242, 242);
+            color: rgb(95, 99, 104);
+            font-size: 14px;
+            border-radius: 4px;
+            border-width: 0px;
+            height: 36px;
+            min-width: 54px;
+            padding: 0 16px 0 16px;
+            margin: 0 4px 0 4px;
+            box-shadow: none;
+        }
         footer {
             color: #5f6368;
             font-size: 14px;
@@ -119,8 +131,8 @@
             <input id="search-bar" type="search">
         </form>
         <div Class="search-buttons-container">
-            <button id="google-search">Google Search</button>
-            <button id="feeling-lucky">I'm Feeling Lucky</button>
+            <button id="google-search" Class="search-buttons">Google Search</button>
+            <button id="feeling-lucky" Class="search-buttons">I'm Feeling Lucky</button>
         </div>
     </div>   
     <footer>
