--- a/google2.html
+++ b/google2.html
@@ -20,6 +20,10 @@
         li {
             padding-left: 15px;
         }
+        li:hover {
+            text-decoration: underline;
+            color: #5f6368;
+        }
         a {
             color: inherit;
             text-decoration: none;
@@ -42,6 +46,9 @@
             color: #FFF;
             text-align: center;
         }
+        #signin:hover {
+            text-decoration: none;
+        }
         .align-left {
             display: flex;
             justify-items: left;
@@ -53,6 +60,7 @@
             justify-items: right;
             align-items: center;
             opacity: .85;
+            margin-right: 5px;
         }
         .main {
             display: flex;
@@ -69,10 +77,28 @@
         .search-bar-container {
             display: flex;
             justify-content: center;
+            align-items: center;
             padding: 15px 0 15px 0;
         }
         #search-bar {
-
+            display: flex;
+            width: 450px;
+            height: 40px;
+            border-radius: 20px;
+            background-color: #FFF;
+            border-width: 1px;
+            box-shadow: none;
+        }
+        #search-bar:hover {
+            border-width: 2px;
+            box-shadow:rgb(95, 99, 104);
+        }
+        #mag-glass {
+            height: 20px;
+            width: 20px;
+            filter: rgb(154, 160, 166);
+            transform: translate(-435px);
+            justify-items: left;
         }
         .search-buttons-container {
             display: flex;
@@ -81,18 +107,29 @@
         .search-buttons {
             background-color: rgb(242, 242, 242);
             color: rgb(95, 99, 104);
+            border-color: rgb(242, 242, 242);
             font-size: 14px;
             border-radius: 4px;
-            border-width: 0px;
+            border-width: 1px;
             height: 36px;
             min-width: 54px;
             padding: 0 16px 0 16px;
             margin: 0 4px 0 4px;
             box-shadow: none;
         }
+        .search-buttons:hover {
+            border-color: #000;
+            background-color: rgb(250, 250, 250);
+            
+        }
         footer {
             color: #5f6368;
             font-size: 14px;
+        }
+        #end-nav {
+            padding: 15px 0 15px 0;
+            margin: 0 -8px -8px -8px;
+            background-color: rgb(242, 242, 242);
         }
         .footer-nav {
             padding-left: 27px;
@@ -129,14 +166,17 @@
         </div>
         <form Class="search-bar-container">
             <input id="search-bar" type="search">
+            <svg id="mag-glass" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                <path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
+            </svg>
         </form>
         <div Class="search-buttons-container">
-            <button id="google-search" Class="search-buttons">Google Search</button>
-            <button id="feeling-lucky" Class="search-buttons">I'm Feeling Lucky</button>
+            <button id="google-search" Class="search-buttons" type="button">Google Search</button>
+            <button id="feeling-lucky" Class="search-buttons" type="button">I'm Feeling Lucky</button>
         </div>
     </div>   
     <footer>
-        <nav>
+        <nav id="end-nav">
             <div Class="align-left">
                 <li Class="footer-nav"><a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=webhp&cd=&cad=rja&uact=8&ved=0ahUKEwjHgYaVsOXwAhWvAp0JHYRECdgQkdQCCA4&url=https%3A%2F%2Fwww.google.com%2Fintl%2Fen_us%2Fads%2F%3Fsubid%3Dww-ww-et-g-awa-a-g_hpafoot1_1!o2%26utm_source%3Dgoogle.com%26utm_medium%3Dreferral%26utm_campaign%3Dgoogle_hpafooter%26fg%3D1&usg=AOvVaw3XLzhicA5ZZW0afDbW0l2T">Advertising</a></li>
                 <li Class="footer-nav"><a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=webhp&cd=&cad=rja&uact=8&ved=0ahUKEwjHgYaVsOXwAhWvAp0JHYRECdgQktQCCA8&url=https%3A%2F%2Fwww.google.com%2Fservices%2F%3Fsubid%3Dww-ww-et-g-awa-a-g_hpbfoot1_1!o2%26utm_source%3Dgoogle.com%26utm_medium%3Dreferral%26utm_campaign%3Dgoogle_hpbfooter%26fg%3D1&usg=AOvVaw2SJ4zwRVXKyZr53qG9dm4K">Business</a></li>
